5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1712_2503.log
== TEST (2019-05-15 00:58:24) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal=x
t= n+sinal*(n/n+2)
while(t<n):
	sinal=-sinal
	print(round(t,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    sinal=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:59:03) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t<n):
	sinal=-sinal
	print(round(t,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    sinal=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:59:13) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t<n):
	sinal=-sinal
print(round(t,8))

-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 00:59:20) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t<n):
	sinal=-sinal
print(round(t,8))

-- EXECUTION TIME:
0.203011
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
139.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
25.0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
18.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:59:25) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t<n):
	sinal=-sinal
print(round(t,8))

-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:02:56) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t=n):
	sinal=-sinal
print(round(t,8))

-- ERROR:
File "XXXX", line 5
    while(t=n):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:03:03) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t==n):
	sinal=-sinal
print(round(t,8))

-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:03:16) 
-- CODE:
n=int(input("Numero natural qualquer: "))
soma=0
sinal= 1
t= n+sinal*(n/n+2)
while(t==n):
	sinal=-sinal
print(round(t,8))

-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:37:04) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
	j=j+h
print(round(j, 8))

-- EXECUTION TIME:
0.14833
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
